@@ -7,6 +7,7 @@ Fixes:
     * Force destruction of all pending file when shuting down eet.
     * Make eet_dictionary thread safe.
     * Check that gnutls and openssl don't return below zero size during decipher.
+    * Fix crash when cyphering huge amount of data.
 
 Eet 1.6.0
 
